servian-techapp/deployment_files/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: techapp
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: techapp
  template:
    metadata:
      labels:
        app: techapp
    spec:
      containers:
      - name: techapp
        image: servian/techchallengeapp:latest
        readinessProbe:
          httpGet:
            path: /healthcheck
            port: 3000
          periodSeconds: 1
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 10
        args: ["serve","updatedb -s"]
        ports:
        - containerPort: 3000
      #   envFrom:
      #     - configMapRef:
      #         name: techapp-cnfg
      #     - secretKeyRef:
      #          name: database-creds 
      # ServiceAccountName: techapp-service-account
