servian-techapp/deployment_files/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: techapp-svc
  namespace: dev
spec:
  selector:
    app: techapp
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
