servian-techapp/deployment_files/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: techapp-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: techapp.<changeme>
    http:
      paths:
        - path: /
          backend:
            serviceName: techapp-svc
            servicePort: 3000
